# sales-agent

./: .dockerignore  .env.example  .pre-commit-config.yaml  .ruff.toml  DOCKER_SETUP.md  Dockerfile  MONITORING.md  README.md  RediDocker  cache.py  config.py  docker-compose-full.yml  docker-compose.yml  grafana_dashboard.json  main.py  manager.py  models.py  produtos.xlsx  prometheus.yml  pyproject.toml  req.txt  requirements-dev.txt  requirements-pinned.txt  requirements.txt  setup_script.sh  test.db
.github/workflows/: ci.yml  deploy.yml  lint-format.yml  test.yml
agent/: agent_service.py  claude_langchain.py  deepseek_langchain.py  deepseek_langchain_service.py  deepseek_models.py  deepseek_service.py  deepseek_web_service.py  fireworks_service.py  gemini_langchain.py  mcp_client.py  mcp_models.py  prompt.md
grafana/provisioning/dashboards/: dashboards.yml
infrastructure/database/: database.py
messaging/: evolution_client.py  message_service.py
sales/: customer_management.py  customer_model.py  customer_routes.py  customer_schema.py  customers_service.py  user.py
shared/: __init__.py  metrics.py
tasks/: rq_tasks.py
tests/: __init__.py  conftest.py  test_cache.py  test_evolution_client.py  test_main.py
utils/: audio_to_text.py  rabbitmq_consumer.py  redis_cache.py
