[project]
name = "evolution-mcp-bridge"
version = "1.0.0"
description = "Bridge between Evolution API and MCP Server"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "httpx==0.25.2",
    "pydantic==2.4.0",
    "python-dotenv==1.0.0",
    "websockets==12.0",
    "redis==5.0.1",
]

[project.optional-dependencies]
dev = [
    "ruff==0.1.6",
    "black==23.11.0",
    "pylint==3.0.2",
    "mypy==1.7.1",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "fakeredis==2.18.1",
    "respx==0.20.1",
    "pre-commit==3.5.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  | \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]     # Allow assert in tests

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=. --cov-report=html --cov-report=term-missing -v"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
